@@ -88,18 +88,33 @@ class GO_Base_Mail_Message extends Swift_Message{
 	
 		$toList = new GO_Base_Mail_EmailRecipients($to);
 		$to =$toList->getAddresses();
-		foreach($to as $email=>$personal)
-			$this->addTo($email, $personal);
+		foreach($to as $email=>$personal){
+			try{
+				$this->addTo($email, $personal);
+			} catch (Exception $e){
+				trigger_error('Failed to add receipient address: '.$e);
+			}
+		}
 		
 		$ccList = new GO_Base_Mail_EmailRecipients($cc);
 		$cc =$ccList->getAddresses();
-		foreach($cc as $email=>$personal)
-			$this->addCc($email, $personal);
+		foreach($cc as $email=>$personal){
+			try{
+				$this->addCc($email, $personal);
+			} catch (Exception $e){
+				trigger_error('Failed to add CC address: '.$e);
+			}
+		}
 		
 		$bccList = new GO_Base_Mail_EmailRecipients($bcc);
 		$bcc =$bccList->getAddresses();
-		foreach($bcc as $email=>$personal)
-			$this->addBcc($email, $personal);
+		foreach($bcc as $email=>$personal){
+			try{
+				$this->addBcc($email, $personal);
+			} catch (Exception $e){
+				trigger_error('Failed to add BCC address: '.$e);
+			}
+		}
 
 		if(isset($structure->headers['from'])){
 			
